--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     Fan,3 Speeds 48 Air Outlet, Free Adjustment Personal Cooling Fan, Wearable Portable
                                     Fan Suitable for Traveling, Sports, Office (White)</p>
                                 <a href="https://amzn.to/3ZDe3xD" class="card__button bg-info"
-                                style="text-decoration: none;">Buy Now</a>
+                                style="text-decoration: none;" target="_blank">Buy Now</a>
                             </div></div>
                     </div>
                     <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3" style="width: 21rem;  height: 34.5rem;">
@@ -67,7 +67,7 @@
                                 <p class="card__description">ThreeH Plastic Projection Alarm Clock with USB Charger 180° Rotable
                                     Projector with FM Radio 7.4'' Mirror Display 2 Sounds 4 Dimmer (White)</p>
                                 <a href="https://amzn.to/3Yfqvm5" class="card__button bg-info"
-                                style="text-decoration: none;">Buy Now</a>
+                                style="text-decoration: none;" target="_blank">Buy Now</a>
                             </div></div>
                     </div>
                     <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3" style="width: 21rem;  height: 34.5rem;">
@@ -86,7 +86,7 @@
                                     security spy camera | Support Maximum 256 Gb Memory Cards | Continuous & Motion
                                     Based Recording Option | Ideal for home/office monitoring</p>
                                 <a href="https://amzn.to/3JbPxyc" class="card__button bg-info"
-                                    style="text-decoration: none;">Buy Now</a>
+                                    style="text-decoration: none;" target="_blank">Buy Now</a>
                             </div>
                         </div>
                 </div>
@@ -103,7 +103,7 @@
                             <h2 class="card_title">Toyshine Bot Robot Pioneer</h2>
                             <p class="card__description">Toyshine Bot Robot Pioneer | Colorful Lights and Music | All
                                 Direction Movement | Dancing Robot Toys for Boys and Girls | Blue Color</p>
-                            <a href="https://amzn.to/3JbRfjj" class="card__button bg-info" style="text-decoration: none;">Buy
+                            <a href="https://amzn.to/3JbRfjj" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                             <p class="card__description">Odzeni Touch Dimmable Table Light - 16 Color Mode USB Type-C
                                 Charging Acrylic Led Night Light - RGB Crystal Table Diamond Lamp with Remote
                                 Control and 3 Dimmable Touch</p>
-                            <a href="https://amzn.to/3ycckno" class="card__button bg-info" style="text-decoration: none;">Buy
+                            <a href="https://amzn.to/3ycckno" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                             <p class="card__description">RAK Hammer Multi-Tool - Multi-Functional 12 in 1 Mini
                                 Hammer Camping Gear Survival Tool - Unique Tool Gift for Men, DIY Handyman,
                                 Father/Dad, Husband, Boyfriend, Him, Women</p>
-                            <a href="https://amzn.to/3SPxQI1" class="card__button bg-info" style="text-decoration: none;">Buy
+                            <a href="https://amzn.to/3SPxQI1" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                         <div class="card__content--container | flow">
                             <h3 class="card__title text-light">2-in-1 Laptop, Mobile Tabletop Stand</h3>
                             <p class="card__description">GIZGA essentials iStuff365 2-in-1 Laptop, Mobile Tabletop Stand, 12" to15.6 Laptops, Ergonomic Design, 8-Adjustable Angles, Heat Dissipation, Anti-Slip Base, Portable and Lightweight, Black</p>
-                            <a href="https://amzn.to/3motfk6" class="card__button bg-info" style="text-decoration: none;">Buy
+                            <a href="https://amzn.to/3motfk6" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
@@ -165,7 +165,55 @@
                         <div class="card__content--container | flow">
                             <h2 class="card__title">RGB Changing Desk Lamp</h2>
                             <p class="card__description">4Mura Crystal Rose Diamond 16 Color RGB Changing Mode LED Night Lights - USB Remote and Touch Control Desk Lamp for Bedroom, Living Room</p>
-                            <a href="https://amzn.to/3SPxQI1" class="card__button bg-info" style="text-decoration: none;">Buy
+                            <a href="https://amzn.to/3SPxQI1" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3" style="width: 21rem;  height: 34.5rem;">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <a href="https://www.amazon.in/Fagomfer-Touchscreen-Mechanical-Keyboard-Multifunctional/dp/B09PMKF4HH?keywords=touchscreen+keyboard&qid=1678435016&sprefix=touchscreen+ke%2Caps%2C216&sr=8-3&linkCode=li3&tag=gadgets008c-21&linkId=fff84152315f8579b929dc2649c65f12&language=en_IN&ref_=as_li_ss_il" target="_blank" class="mx-auto"><img  src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B09PMKF4HH&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=gadgets008c-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B09PMKF4HH" width="1" height="1"  alt="" style="border:none !important; margin:0px !important;" />
+                    <div class="card__content | flow">
+                        <div class="card__content--container | flow">
+                            <h2 class="card__title">Touchscreen Keyboard</h2>
+                            <p class="card__description">Fagomfer FICIHP K2 12.6" Touchscreen Gaming Mechanical Keyboard,71 Keys Portable USB Wired RGB Backlit Compact Keyboard,Plug and Play Multifunctional Split Screen Keyboard for Windows Mac Android</p>
+                            <a href="https://amzn.to/3kYAC1k" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3" style="width: 21rem;  height: 34.5rem;">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <a href="https://www.amazon.in/HALO-NATION%C2%AE-Automatic-Machine-Gatling/dp/B0B868F16W?keywords=bubble+gun+purple&qid=1678440973&sprefix=bubble+gun+pur%2Caps%2C202&sr=8-8&linkCode=li3&tag=gadgets008c-21&linkId=23befd16f8fb264b5b61e93740f98885&language=en_IN&ref_=as_li_ss_il" target="_blank" class="mx-auto"><img  src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0B868F16W&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=gadgets008c-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B0B868F16W" width="1" height="1"  alt="" style="border:none !important; margin:0px !important;" />
+                    <div class="card__content | flow">
+                        <div class="card__content--container | flow">
+                            <h2 class="card__title">Bubbles Gun</h2>
+                            <p class="card__description">HALO NATION® Automatic Bubble Gun Rocket Bubble Maker Machine Gatling Bubble Gun Bubble Blaster Toy , 25 Hole Bubble Maker Machine Gun Bubble Bazooka Blower for Kids - Purple</p>
+                            <a href="https://amzn.to/3kWl3at" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3" style="width: 21rem;  height: 34.5rem;">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <a href="https://www.amazon.in/Sealing-Machine-Plastic-Portable-Multicolour/dp/B0BRVJCQZ1?keywords=mini+sealing+machine&qid=1678442003&sprefix=mini+sea%2Caps%2C341&sr=8-3&linkCode=li3&tag=gadgets008c-21&linkId=264d1a34d100995a4f2a4bee21f1adff&language=en_IN&ref_=as_li_ss_il" target="_blank" class="mx-auto"><img src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0BRVJCQZ1&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=gadgets008c-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B0BRVJCQZ1" width="1" height="1" alt="" style="border:none !important; margin:0px !important;" />
+                    <div class="card__content | flow">
+                        <div class="card__content--container | flow">
+                            <h2 class="card__title">Mini Sealer</h2>
+                            <p class="card__description">MGI Mini Sealing Machine Plastic Bag Sealer Hand Held Heat Portable Mini Super Seal Packing Plastic Bag Tool Sealing Machine (Multicolour: Pack Of 1 )</p>
+                            <a href="https://amzn.to/3J8yJqz" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3" style="width: 21rem;  height: 34.5rem;">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <a href="https://www.amazon.in/HPRT-Thermal-Transfer-Ribbon-Printer-New/dp/B08RYJ3XGM?keywords=hprt+wireless+printer&qid=1678443711&sprefix=HPRT%2Caps%2C344&sr=8-5&linkCode=li3&tag=gadgets008c-21&linkId=a5db5bba9507b1899bbdd9a2d53b9be5&language=en_IN&ref_=as_li_ss_il" target="_blank" class="mx-auto"><img src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08RYJ3XGM&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=gadgets008c-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B08RYJ3XGM" width="1" height="1" alt="" style="border:none !important; margin:0px !important;" /><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B0BRVJCQZ1" width="1" height="1" alt="" style="border:none !important; margin:0px !important;" />
+                    <div class="card__content | flow">
+                        <div class="card__content--container | flow">
+                            <h2 class="card__title">HPRT Printer(New Version)</h2>
+                            <p class="card__description">HPRT Exclusive Thermal Ribbon - Support MT800 (216mm) Portable Thermal Printer-New Version</p>
+                            <a href="https://amzn.to/3Lfuo80" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
