--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="card__content--container | flow">
                             <h2 class="card_title">RGB Changing Desk Lamp</h2>
                             <p class="card__description">4Mura Crystal Rose Diamond 16 Color RGB Changing Mode LED Night Lights - USB Remote and Touch Control Desk Lamp for Bedroom, Living Room</p>
-                            <a href="https://amzn.to/3SPxQI1" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
+                            <a href="https://amzn.to/3yNfoGI" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
@@ -209,12 +209,12 @@
                 </div>
                 <div class="card2 col-lg-3 col-md-4 col-12 mx-3 my-3 product" style="width: 21rem;  height: 34.5rem;">
                     <!-- <img src="..." class="card-img-top" alt="..."> -->
-                    <a href="https://www.amazon.in/HPRT-Thermal-Transfer-Ribbon-Printer-New/dp/B08RYJ3XGM?keywords=hprt+wireless+printer&qid=1678443711&sprefix=HPRT%2Caps%2C344&sr=8-5&linkCode=li3&tag=gadgets008c-21&linkId=a5db5bba9507b1899bbdd9a2d53b9be5&language=en_IN&ref_=as_li_ss_il" target="_blank" class="mx-auto"><img src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08RYJ3XGM&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=gadgets008c-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B08RYJ3XGM" width="1" height="1" alt="" style="border:none !important; margin:0px !important;" /><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B0BRVJCQZ1" width="1" height="1" alt="" style="border:none !important; margin:0px !important;" />
+                    <a href="https://www.amazon.in/Lythan-Portable-A4-Bluetooth-Compatible/dp/B0BF4K5D4V?pd_rd_w=cT54B&content-id=amzn1.sym.7938e11a-362b-421f-bd30-8dd8d3c4b65f&pf_rd_p=7938e11a-362b-421f-bd30-8dd8d3c4b65f&pf_rd_r=TAEZ3FTBR3MTXGBHD0BS&pd_rd_wg=mCirp&pd_rd_r=ee04b6e0-12f7-4b88-a385-4b45363a2e7b&pd_rd_i=B0BF4K5D4V&linkCode=li3&tag=gadgets008c-21&linkId=8d1a22372831a1e0b308b8e1a841d196&language=en_IN&ref_=as_li_ss_il" target="_blank" class="mx-auto"><img  src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0BF4K5D4V&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=gadgets008c-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=gadgets008c-21&language=en_IN&l=li3&o=31&a=B0BF4K5D4V" width="1" height="1"  alt="" style="border:none !important; margin:0px !important;" />
                     <div class="card__content | flow">
                         <div class="card__content--container | flow">
-                            <h2 class="card_title">HPRT Printer(New Version)</h2>
-                            <p class="card__description">HPRT Exclusive Thermal Ribbon - Support MT800 (216mm) Portable Thermal Printer-New Version</p>
-                            <a href="https://amzn.to/3Lfuo80" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
+                            <h2 class="card_title">Lythan Portable Printer</h2>
+                            <p class="card__description">Lythan Portable Printer, A4 Wireless Bluetooth Travel Printer, Portable Thermal Printer Compatible with Android and iOS, Mobile Printer</p>
+                            <a href="https://amzn.to/3lLYm9i" class="card__button bg-info" style="text-decoration: none;" target="_blank">Buy
                                 Now</a>
                         </div>
                     </div>
